src/main/resources/static/css/company/main.css
.arrow-btn {
    background: #FFFFFF;
    box-shadow: 0px 4px 1.8px 2px rgba(0, 0, 0, 0.25);
    border-radius: 4px;
}

.arrow {
    font-size: 44px;
    color: #1E1E1E;
}

.plus-btn {
    font-size: 48px;
    color: #1E1E1E;
    margin: 0;
    font-weight: 48;
}

.container{
    max-width: 100%;
    width: 100%;
    padding: 0 15px;
}

.navbar {
    padding: 10px 20px;
    color: #000;
}

.navbar-brand span {
    font-size: 1.5rem;
    font-weight: bold;
    color: #000;
}

.nav-link{
    margin: 0;
    color: #000000;
    font-weight: 400 ;
    font-size: 20px;
}

.navbar-nav .nav-link {
    font-weight: bold;
    font-size: 1.1rem;
    color: #000 !important;
}

.navbar-nav .nav-link:hover {
    color: #000 !important;
}

.titleList {
    margin: 0;
}

.infoCreateContainer {
    margin: 0;
}

.plus-btn-over {
    padding: 0;
    margin: 0;
}

.submit-btn {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 319px;
    height: 51px;
    background: #96FF9D;
    box-shadow: 0px 4px 8px 3px rgba(0, 0, 0, 0.15), 0px 1px 3px rgba(0, 0, 0, 0.3);
    border-radius: 14px;
    border: none;
}

.check-icon {
    font-size: 44px;
    color: #1E1E1E;
}

.notification {
    position: fixed;
    top: 10px;
    right: 10px;
    background-color: #FFFFFF;
    color: #1E1E1E;
    padding: 10px 20px;
    border-radius: 5px;
    border: 1px solid #1E1E1E;
    z-index: 1000;
    transition: opacity 0.5s ease;
}

form {
    font-family: Arial, sans-serif;
    color: #333;
}

.btn-custom-delete {
    padding: 0;
}

.delete-icon::before{
    font-size: 30px;
}

.bi-reply-all::before{
    font-size: 30px;
}


.h-company-info{
    width: 80%;
}

.company-info-buttons{
    width: 20%;
}

.row {
    margin: 0;
}


.form-group {
    margin-bottom: 15px;
}

.col-form-label {
    font-weight: 500;
    color: #1E1E1E;
}

input[type="text"],
input[type="password"],
input[type="email"] {
    border: 1px solid #ddd;
    padding: 10px;
    font-size: 1em;
    border-radius: 5px;
    transition: border-color 0.3s;
}

input[type="text"]:focus,
input[type="password"]:focus,
input[type="email"]:focus {
    border-color: #007bff;
    outline: none;
}

.text-danger {
    font-size: 0.85em;
    font-weight: 600;
    color: #e74c3c;
}

.forms-back-color {
    background-color: #d9d9d9;
    padding: 1px 0 1px;
}

.forms {
    margin: 20px;
    background-color: white;
    padding: 20px;
    box-shadow: 0 4px 1.8px 2px rgba(0, 0, 0, 0.25);
    border-radius: 4px;
}

.search {
    list-style-type: none;
    padding: 0;
    margin: 0;
}

.search li.choice-company {
    --background-color: white;
    --text-color: inherit;
    box-shadow: 0 4px 1.8px 2px rgba(0, 0, 0, 0.25);
    padding: 13px 10px;
    background-color: var(--background-color);
}

.search li.choice-company:nth-child(even) {
    --background-color: #d9d9d9;
}

.search li.choice-company.active {
    border: 3px solid blue;
    --text-color: #1E1E1E;
}

.search li.choice-company a {
    text-decoration: none;
    color: var(--text-color);
    display: block;
    width: 100%;
}

.hide {
    display: none;
}

.companies-nav{
    background-color: #d9d9d9;
}

.form-group,
.list-none-line {
    border: none;
}

@media (max-width: 768px) {
    .col-md-6 {
        margin-bottom: 20px;
    }
}

.inline-block {
    display: inline-block;
}

.edit-input {
    width: auto;
    display: inline-block;
    vertical-align: middle;
}

.icon-custom{
    color: black;
    font-size: 1.2em;
    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
}

.icon-custom-pencil{
    color: black;
    font-size: 0.8em;
    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
}

.icon-custom-eye{
    color: black;
    font-size: 1.4em;
    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
}

#cancelBtn, #saveBtn {
    margin-left: 5px;
    vertical-align: middle;
}

.custom-modal-width {
    max-width: 100%;
    margin: 5% 2% 0 18%;
    max-height: 83vh;
    overflow-y: auto;
}

.modal-header-create {
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
    border: none;
}

.modal-header-create .modal-title-create {
    flex-grow: 1;
    text-align: center;
}

.modal-header-create .btn-close-create {
    position: absolute;
    right: 20px;
}

@media (max-width: 1260px) {
    .form-group.row .col-md-8 {
        display: block;
        width: 100%;
    }

    .form-group.row .col-md-4 {
        width: 100%;
        margin-bottom: 10px;
    }
}

@media (max-width: 1630px) {
    .custom-modal-width {
        max-width: 90%;
        margin: 7% 2% 0 18%;
        max-height: 88vh;
        overflow-y: auto;
    }
}

@media (max-width: 1220px) {
    .custom-modal-width {
        max-width: 90%;
        margin: 8% 2% 0 18%;
        max-height: 88vh;
        overflow-y: auto;
    }
}

@media (max-width: 1040px) {
    .custom-modal-width {
        max-width: 90%;
        margin: 9% 2% 0 18%;
        max-height: 88vh;
        overflow-y: auto;
    }
}

@media (max-width: 991px) {
    .custom-modal-width {
        max-width: 90%;
        margin: 10% 2% 0 18%;
        max-height: 88vh;
        overflow-y: auto;
    }
}

@media (max-width: 825px) {
    .custom-modal-width {
        max-width: 90%;
        margin: 11% 2% 0 18%;
        max-height: 88vh;
        overflow-y: auto;
    }
}

@media (max-width: 767px) {
    .custom-modal-width {
        max-width: 90%;
        margin: 8% 5% 0 5%;
        max-height: 88vh;
        overflow-y: auto;
    }
}

@media (max-width: 650px) {
    .custom-modal-width {
        max-width: 90%;
        margin: 10% 5% 0 5%;
        max-height: 88vh;
        overflow-y: auto;
    }
}

@media (max-width: 530px) {
    .custom-modal-width {
        max-width: 90%;
        margin: 11% 5% 0 5%;
        max-height: 88vh;
        overflow-y: auto;
    }
}

@media (max-width: 475px) {
    .custom-modal-width {
        max-width: 90%;
        margin: 12% 5% 0 5%;
        max-height: 88vh;
        overflow-y: auto;
    }
}

@media (max-width: 430px) {
    .custom-modal-width {
        max-width: 90%;
        margin: 14% 5% 0 5%;
        max-height: 88vh;
        overflow-y: auto;
    }
}

@media (min-width: 1620px) {
    .companies-sidebar-main {
        width: 15%;
    }

    .companies-info-main {
        width: 85%;
    }
}

@media (min-width: 1372px) {
    .companies-sidebar-main {
        width: 17%;
    }

    .companies-info-main {
        width: 83%;
    }
}

@media (min-width: 1150px) {
    .companies-sidebar-main {
        width: 23%;
    }

    .companies-info-main {
        width: 77%;
    }
}

@media (max-width: 1150px) {
    .companies-sidebar-main {
        width: 100%;
    }
    .companies-info-main {
        width: 100%;
        margin-top: 20px;
    }
}

@media (min-width: 892px) {
    .company-not-required-info {
        width: 50%;
    }

    .company-required-info {
        width: 50%;
    }
}

@media (max-width: 892px) {
    .company-not-required-info {
        width: 100%;
    }

    .company-required-info {
        width: 100%;
    }
}

@media (max-width: 580px) {
    .forms{
        padding: 0;
    }
    .company-not-required-info {
        padding: 0;
    }

    .company-required-info {
        padding: 0;
    }
}


@media (max-width: 450px) {
    .edit-input{
        width: 160px;
    }
}

